--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCIO ROEL</title>
-     <!--Link CSS-->
+     <!--link css-->
     <link rel="stylesheet" href="css/style.css">
-    <!--Link google fonts-->
+    <!--link google fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
- <!--Link Bootstrap CDN-->
+ <!--link bootstrap cdn-->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
- </head>
+ <!--link animated css-->
+ <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <!--link aos-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>
 <body>
 
   <!--Header and Nav bar-->    
@@ -50,7 +58,8 @@
 <!--Main-->    
 <main>   
 <!-- carousel de imgs debajo del navbar -->
-<div id="carouselExample" class="carousel slide">
+<div id="carouselExample" class="carousel slide" data-aos="fade-up"
+data-aos-duration="3000">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="img\imghome1.jpg" class="d-block w-100" alt="Beauty">
@@ -68,35 +77,42 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-<section class="presentacion">
-   <h1> ROCÍO ROEL
+<!--seccion de presentacion con h1-->
+<section data-aos="fade-up"
+data-aos-duration="3000" class="presentacion" >
+   <h1 data-aos="fade-right"> ROCÍO ROEL 
   </h1>
-  <p> Maquilladora dedicada y apasionada con más de ocho años de experiencia. Trabajé mucho en el ámbito de la moda tanto como en eventos sociales. Estoy continuamente capacitándome con grandes y reconocidos artistas en técnicas y las últimas tendencias. 
+  <p data-aos="fade-up"> Maquilladora dedicada y apasionada con más de ocho años de experiencia. Trabajé mucho en el ámbito de la moda tanto como en eventos sociales. Estoy continuamente capacitándome con grandes y reconocidos artistas en técnicas y las últimas tendencias. 
  </p>
 </section>
-
+<!--card-->
 <section class="cards">
-  <div class="card" style="width: 18rem;">
-     <img src="img/imgsec2.jpg" class="card-img-top" alt="Novias by me">
-    <div class="card-body">
-      <h5 class="card-title">Novias by me</h5>
-      <p class="card-text"> Ofrezco un servicio 100% personalizado y artesanal, vamos hablando a lo largo de los meses. El día de tu boda, no sólo maquillo y peino, me gusta también asistirte en todo lo que necesites. Respecto a mi trabajo, voy a potenciar tu belleza al máximo creando el mejor estilo que vaya con vos. 
-      </p>
-      <a href="https://wa.me//541138539560" class="pedircita">Pedir cita</a>
-    </div>
-  </div>
+      <div class="card" style="width: 18rem;" data-aos="fade-up">
+      <img src="img/imgsec2.jpg" class="card-img-top" alt="Novias by me">
+      <div class="card-body">
+        <h2 class="card-title">Novias by me</h2>
+        <p class="card-text">"Para el maquillaje de novias, la clave está en la naturalidad y la durabilidad. Utiliza productos de larga duración y prueba el maquillaje antes del gran día para asegurarte de que te sientas cómoda y radiante. Recuerda, menos es más para resaltar tu belleza natural."</p>
+        <a href="https://wa.me//541138539560" class="pedircita">Pedir cita</a>
+      </div>
+      </div>
+      <div>
+        <section class="cards">
+          <div class="card" style="width: 18rem;" data-aos="fade-up">
+          <img src="img/imgsec3.jpg" class="card-img-top" alt="Consejos">
+          <div class="card-body">
+            <h2 class="card-title">Consejos</h2>
+            <p class="card-text">Además de los tratamientos que puedas realizar en manos de los profesionales, es importante que sigas tres pasos básicos! Limpieza, hidratación y protección solar.</div>
+          </div>
+        
+ </section>
 
-  <div class="card" style="width: 18rem;">
-    <img src="img/imgsec3.jpg" class="card-img-top" alt="Consejos">
-    <div class="card-body">
-      <h5 class="card-title">Consejos</h5>
-      <p class="card-text"> El primer paso para un maquillaje impecable es una piel bien preparada e hidratada como una rutina diaria además del uso de protector solar específico. Ésto ayudará a que el maquillaje siempre luzca natural. 
-      </p>
-    </div>
+
+<!--div de wsp-->
+<section class="icon-wsp">
+  <div>
+ <a href="https://wa.me/541138539560/"> <img src="img/iconwspcolor.png" alt="contacto whatsapp"></a>
   </div>
 </section>
-
 </main>
 
 <!-- footer-->
@@ -114,5 +130,9 @@
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+ <!-- Inicialización de AOS -->
+ <script>
+  AOS.init();
+</script>
 </body>
 </html>
