--- a/sections/about.html
+++ b/sections/about.html
@@ -13,7 +13,15 @@
    <!--Link Bootstrap CDN-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head> 
+<!--link animated css-->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<!--link aos-->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  </head> 
 <body>
 
 <header>
@@ -48,7 +56,8 @@
 
 <main>
 
-<section class="sectionaboutme">
+<section class="sectionaboutme" data-aos="fade-up"
+data-aos-duration="3000">
     <h2>
         ROCÍO ROEL
     </h2>
@@ -57,6 +66,12 @@
         También peina y brinda un serivicio personalizado para Novias y clientas. </br>
         Trabajo con productos profesionales importados de primera calidad como Dior, Chanel, Mac, Urban Decay, Lancome, Benefit, Kiehls, Marc Jacobs, Anastasia Beverly Hills, Stila, Estee Lauder, Kat Von D, Lorac, Kryolan, Nars, Charlotte Tilbury, Kylie, etc.
     </p> 
+</section>
+
+<section class="icon-wsp">
+  <div>
+ <a href="https://wa.me/541138539560/"> <img src="../img/iconwspcolor.png" alt="contacto whatsapp"></a>
+  </div>
 </section>
 
 </main>
@@ -75,5 +90,9 @@
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<!-- Inicialización de AOS -->
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
