--- a/sections/contact.html
+++ b/sections/contact.html
@@ -13,7 +13,14 @@
    <!--Link Bootstrap CDN-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>  
+<!--link animated css-->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<!--link aos-->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  </head>  
 <body>
 
 <header>
@@ -48,10 +55,11 @@
 
 <main>
 
-<section class="contact">
-    <h3>
+<section class="contact" data-aos="fade-up"
+data-aos-duration="3000">
+    <h1>
         CONTACT ME
-    </h3>
+    </h1>
     <p>
         Si querés conocer más sobre servicios ó cursos, escribime y me comunicaré a la brevedad: </p><br>
     </p>
@@ -60,10 +68,11 @@
     <a href="https://wa.me/541138539560/"> <img src="../img/iconwsp.png" alt="icono whatsapp"></a>
   </section>
 
-    <section class="studio">
-    <h3>
+    <section class="studio" data-aos="fade-up"
+    data-aos-duration="3000">
+    <h2>
         ESTUDIO
-   </h3>
+   </h2>
    <p>
 Banfield Oeste. 
 Zona Sur, GBA.
@@ -87,5 +96,9 @@ Argentina.
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-  </body>
+  <!-- Inicialización de AOS -->
+<script>
+  AOS.init();
+</script>
+</body>
   </html>
