--- a/sections/portfolio.html
+++ b/sections/portfolio.html
@@ -13,6 +13,14 @@
    <!--Link Bootstrap CDN-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!--link animated css-->
+ <link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<!--link aos-->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head> 
 <body>
 
@@ -58,16 +66,22 @@
 
 <section class ="portfolio">
   <div class= "grid-container"> 
-<div class="grid-item"> <img src="../img/portf1.jpg" alt="Trabajo 1"></div>
-<div class="grid-item"> <img src="../img/portf4.jpg" alt="Trabajo 4"></div>
-<div class="grid-item"> <img src="../img/portf5.jpg" alt="Trabajo 5"></div>
-<div class="grid-item"> <img src="../img/portf6.jpg" alt="Trabajo 6"></div>
-<div class="grid-item"> <img src="../img/portf7.jpg" alt="Trabajo 7"></div>
-<div class="grid-item"> <img src="../img/portf8.jpg" alt="Trabajo 8"></div>
-<div class="grid-item"> <img src="../img/portf10.jpg" alt="Trabajo 10"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf1.jpg" alt="Trabajo 1"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf4.jpg" alt="Trabajo 4"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf5.jpg" alt="Trabajo 5"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf6.jpg" alt="Trabajo 6"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf7.jpg" alt="Trabajo 7"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf8.jpg" alt="Trabajo 8"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf10.jpg" alt="Trabajo 10"></div>
  </div>
-
 </section>
+
+<section class="icon-wsp">
+  <div>
+ <a href="https://wa.me/541138539560/"> <img src="../img/iconwspcolor.png" alt="contacto whatsapp"></a>
+  </div>
+</section>
+
 </main>
 
 <footer>
@@ -84,5 +98,9 @@
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-  </body>
+  <!-- Inicialización de AOS -->
+ <script>
+  AOS.init();
+</script>
+</body>
   </html>
