--- a/sections/portfolio.html
+++ b/sections/portfolio.html
@@ -56,9 +56,9 @@
 
 <main>
 <section class="sectionportfolio">
-    <h2>
+    <h1>
         Portfolio
-    </h2>
+    </h1>
     <p>
         Some works by Rocío Roel
     </p>
@@ -66,13 +66,13 @@
 
 <section class ="portfolio">
   <div class= "grid-container"> 
-<div class="grid-item" data-aos="fade-right"><img src="../img/portf1.jpg" alt="Trabajo 1"></div>
-<div class="grid-item" data-aos="fade-left"><img src="../img/portf4.jpg" alt="Trabajo 4"></div>
-<div class="grid-item" data-aos="fade-right"><img src="../img/portf5.jpg" alt="Trabajo 5"></div>
-<div class="grid-item" data-aos="fade-left"><img src="../img/portf6.jpg" alt="Trabajo 6"></div>
-<div class="grid-item" data-aos="fade-right"><img src="../img/portf7.jpg" alt="Trabajo 7"></div>
-<div class="grid-item" data-aos="fade-left"><img src="../img/portf8.jpg" alt="Trabajo 8"></div>
-<div class="grid-item" data-aos="fade-right"><img src="../img/portf10.jpg" alt="Trabajo 10"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf1.jpg" alt="Mi trabajo 1"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf4.jpg" alt="Mi trabajo 2"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf5.jpg" alt="Mi trabajo 3"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf6.jpg" alt="Mi trabajo 4"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf7.jpg" alt="Mi trabajo 5"></div>
+<div class="grid-item" data-aos="fade-left"><img src="../img/portf8.jpg" alt="Mi trabajo 6"></div>
+<div class="grid-item" data-aos="fade-right"><img src="../img/portf10.jpg" alt="Mi trabajo 7"></div>
  </div>
 </section>
 
