--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </nav>
 </header>
 
-<!--Main-->    
+<!--main-->    
 <main>   
 <!-- carousel de imgs debajo del navbar -->
 <div id="carouselExample" class="carousel slide" data-aos="fade-up"
@@ -65,7 +65,7 @@ data-aos-duration="3000">
       <img src="img\imghome1.jpg" class="d-block w-100" alt="Beauty">
     </div>
     <div class="carousel-item">
-      <img src="img/imghome2.jpg" class="d-block w-100" alt="Beauty">
+      <img src="img/imghome2.jpg" class="d-block w-100" alt="Segundo beauty">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -85,7 +85,7 @@ data-aos-duration="3000" class="presentacion" >
   <p data-aos="fade-up"> Maquilladora dedicada y apasionada con más de ocho años de experiencia. Trabajé mucho en el ámbito de la moda tanto como en eventos sociales. Estoy continuamente capacitándome con grandes y reconocidos artistas en técnicas y las últimas tendencias. 
  </p>
 </section>
-<!--card-->
+<!--cards-->
 <section class="cards">
       <div class="card" style="width: 18rem;" data-aos="fade-up">
       <img src="img/imgsec2.jpg" class="card-img-top" alt="Novias by me">
@@ -127,10 +127,10 @@ data-aos-duration="3000" class="presentacion" >
 </div>
 </footer>
 
-<!--Bootstrap JS-->
+<!--bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
- <!-- Inicialización de AOS -->
+ <!-- inicializacion de AOS -->
  <script>
   AOS.init();
 </script>
