--- a/sections/contact.html
+++ b/sections/contact.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCIO ROEL | Contact</title>
-      <!--Link CSS-->
+    <!--link meta description-->
+    <meta name="description" content="Contactame! Maquilladora profesional en Buenos Aires. Maquillaje y peinado a domicilio. Novias, madrinas, 15 años, sociales. Moda y clases de automaquillaje.">
+   <!--meta keywords-->
+    <meta name="keywords" content="rocio roel, maquilladora a domicilio, peinadora Buenos Aires, maquillaje profesional Banfield, peinado bodas Buenos Aires, maquillaje eventos especiales, servicios belleza domicilio, maquillaje books, peinadora fiestas Banfield, maquilladora para producciones, maquillaje sesiones fotográficas, maquillaje para filmacion">
+  <!--meta author-->
+  <meta name="author" content="Rocío Roel">
+    <!--Link CSS-->
       <link rel="stylesheet" href="../css/style.css">
       <!--Link google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <!--link favicon-->
+<link rel="shortcut icon" href="../img/icon-makeup.ico" type="image/x-icon">
    <!--Link Bootstrap CDN-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
